feat: create model classes using Eloquent

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
     "require": {
         "illuminate/database": "^7.1"
+    },
+    "autoload": {
+
+        "classmap": [
+
+            "classes"
+
+        ]
+
     }
+
 }
